--- a/homepage.html
+++ b/homepage.html
@@ -4,6 +4,7 @@
 <link rel="shortcut icon" type="image/jpg" href="2.PNG">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-9633694480383360">
     <title>
  
 Education System in Nepal</title>
@@ -601,4 +602,5 @@ Education System in Nepal</title>
 </script>
 
 </body>
+
 </html>
